[gd_scene load_steps=4 format=3 uid="uid://dtvyxrdfmxd78"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_7borv"]
[ext_resource type="Texture2D" uid="uid://c660hqcmge83r" path="res://assets/menu/settings_bg.png" id="2_sxga4"]
[ext_resource type="Theme" uid="uid://b6jvf3edqsin" path="res://themes/buttonTheme.tres" id="3_vq06p"]

[node name="settigns" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7borv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_sxga4")

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 825.0
offset_top = 600.0
offset_right = 960.0
offset_bottom = 631.0
scale = Vector2(2, 2)
theme = ExtResource("3_vq06p")
text = "Back to menu"

[node name="fullscreen" type="Button" parent="."]
layout_mode = 0
offset_left = 825.0
offset_top = 500.0
offset_right = 960.0
offset_bottom = 531.0
scale = Vector2(2, 2)
theme = ExtResource("3_vq06p")
text = "Fullscreen
"

[node name="windowed" type="Button" parent="."]
layout_mode = 0
offset_left = 825.0
offset_top = 400.0
offset_right = 960.0
offset_bottom = 431.0
scale = Vector2(2, 2)
theme = ExtResource("3_vq06p")
text = "Windowed"

[connection signal="button_up" from="back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="fullscreen" to="." method="_on_fullscreen_button_up"]
[connection signal="button_up" from="windowed" to="." method="_on_windowed_button_up"]
